src/objects/Navigation_Group__c.object
<CustomObject><fields>
        <fullName>Chatter_Group__c</fullName>
        <description>If this field is populated, the Navigation group will direct the user to the Chatter Group populated</description>
        <inlineHelpText>If this field is populated, the Navigation group will direct the user to the Chatter Group populated</inlineHelpText>
        <label>Chatter Group</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Page__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>If this field is populated, the Navigation group will direct the user to the Page populated (Chatter Group takes priority)</description>
        <inlineHelpText>The Page this Navigation Group will link to if the Navigation Group is clicked.</inlineHelpText>
        <label>Page Link</label>
        <referenceTo>Page__c</referenceTo>
        <relationshipLabel>Navigation</relationshipLabel>
        <relationshipName>Navigation_Groups</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Site that this Navigation Group will appear on</description>
        <inlineHelpText>The Site that this Navigation Group will appear on</inlineHelpText>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Navigation</relationshipLabel>
        <relationshipName>Navigation_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Sort_Order__c</fullName>
        <description>The Order in which the Navigation Group will be displayed</description>
        <inlineHelpText>The Order in which the Navigation Group will be displayed</inlineHelpText>
        <label>Sort Order</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>URL__c</fullName>
        <description>If this field is populated, the Navigation group link will be directed to this URL.</description>
        <inlineHelpText>This field allows you to link to an external web site. If populated with a URL, it will override the Page field. Note: http:// is not needed.</inlineHelpText>
        <label>Custom URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>isMegaMenu__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this Navigation option will be a MegaMenu (Having multiple sections in one dropdown)</description>
        <inlineHelpText>When checked this Navigation option will be a MegaMenu (Having multiple sections in one dropdown)</inlineHelpText>
        <label>Mega Navigation Group</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Navigation</label><nameField>
        <label>Navigation Group</label>
        <type>Text</type>
    </nameField><pluralLabel>Navigation</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Page__c</columns>
        <columns>isMegaMenu__c</columns>
        <columns>Site__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>Export_gov</fullName>
        <columns>NAME</columns>
        <columns>isMegaMenu__c</columns>
        <columns>Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site__c</field>
            <operation>equals</operation>
            <value>Export.gov</value>
        </filters>
        <label>Export.gov</label>
    </listViews><listViews>
        <fullName>SUSA_Navigation</fullName>
        <columns>NAME</columns>
        <columns>Sort_Order__c</columns>
        <columns>isMegaMenu__c</columns>
        <columns>Site__c</columns>
        <columns>Page__c</columns>
        <columns>URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Site__c</field>
            <operation>equals</operation>
            <value>SelectUSA</value>
        </filters>
        <label>SUSA</label>
    </listViews></CustomObject>